--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,23 +38,29 @@ body {
 
         .navbar {
             backdrop-filter: blur(10px);
+      
+    
+            .nav-link {
+                font-size: $font-size-nav;
+                font-weight: $font-weight-nav;
+                color: $nav-color;
+            }
+
+            .nav-link.activ {
+                border: none;
+                border-bottom: 2px;
+                background: none;
+            }
+        
+            .offcanvas {
+                background: #3587F2;
+        
+            }
+        
+            .btn-close {
+                border-radius: 50%;
+            }
         }
-    
-        .nav-link {
-            font-size: $font-size-nav;
-            font-weight: $font-weight-nav;
-            color: $nav-color;
-        }
-    
-        .offcanvas {
-            background: #3587F2;
-    
-        }
-    
-        .btn-close {
-            border-radius: 50%;
-        }
-    
         h1,
         h2 {
             font-size: calc(#{$font-size-h1_h2} + 43px * (100vw / 1496));
@@ -68,8 +74,8 @@ body {
         }
     
         p {
-            line-height: calc(25px + 10px * (100vw / 1496));
-            word-spacing: 1px;
+            line-height: 5px;
+            word-spacing: 0.9px;
     
         }
     
@@ -79,12 +85,12 @@ body {
     
     
             .solution_item {
-                width: 390px;
-                height: auto;
                 border-radius: 20px;
-                margin-right: 30px;
-                margin-bottom: 30px;
-    
+                
+                .solution_item_content {
+                    font-size: calc(#{$font-size-main} + 12px * (100vw / 1496));
+            }
+                
             }
         }
     
