--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,7 @@
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
 
+
+
 //fonts-size
 
 $font-size-h1_h2: 55px;
@@ -27,7 +29,15 @@ $element-color: #FFFFFF;
 $email-color: #FAC730;
 $bottom-color: #777777;
 
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 100px;
+}
+
 body {
+    height: auto;
+    overflow-y: scroll;
+    position: relative;
     margin: 0px;
     padding: 0px;
     border: 0px;
@@ -36,7 +46,7 @@ body {
     color: $main-color;
     font-weight: $font-weight-main;
     
-
+    
     .navbar {
         backdrop-filter: blur(10px);
 
@@ -45,9 +55,8 @@ body {
             font-weight: $font-weight-nav;
             color: $nav-color;
         }
+        
     }
-
-
 
     h1,
     h2 {
@@ -65,7 +74,7 @@ body {
 
     p {
         line-height: normal;
-        word-spacing: 0.9px;
+        word-spacing: 4.4px;
 
     }
 
@@ -73,7 +82,7 @@ body {
         color: $element-color;
 
             .solution_item_content {
-                font-size: calc(14px + 4.5 * (100vw / 1280));
+                font-size: calc(12px + 5 * (100vw / 1280));
                 line-height: normal;
             }
 
