--- a/scss/main.css
+++ b/scss/main.css
@@ -1997,8 +1997,8 @@ progress {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
-  background-color: #fff;
+  color: #FFFFFF;
+  background-color: #333333;
   background-clip: padding-box;
   border: 1px solid #ced4da;
   -webkit-appearance: none;
@@ -2019,11 +2019,11 @@ progress {
   cursor: pointer;
 }
 .form-control:focus {
-  color: #212529;
-  background-color: #fff;
-  border-color: #86b7fe;
+  color: #FFFFFF;
+  background-color: #333333;
+  border-color: #F2B90F;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  box-shadow: 0 0 0 0.15rem #F2B90F;
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -2087,8 +2087,12 @@ progress {
 .form-control:hover:not(:disabled):not([readonly])::-webkit-file-upload-button {
   background-color: #dde0e3;
 }
-.form-control:hover:not(:disabled):not([readonly])::file-selector-button {
-  background-color: #dde0e3;
+.form-control:hover {
+  background-color: rgb(69, 69, 70);
+  color: whitesmoke;
+  border-color: #F2B90F;
+  outline: 0;
+  box-shadow: 0 0 0 0.10rem #F2B90F;
 }
 
 .form-control-plaintext {
@@ -2161,17 +2165,17 @@ textarea.form-control-lg {
 .form-control-color {
   width: 3rem;
   height: calc(1.5em + 0.75rem + 2px);
-  padding: 0.375rem;
+  padding: 0.275rem;
 }
 .form-control-color:not(:disabled):not([readonly]) {
   cursor: pointer;
 }
 .form-control-color::-moz-color-swatch {
   border: 0 !important;
-  border-radius: 0.375rem;
+  border-radius: 0.275rem;
 }
 .form-control-color::-webkit-color-swatch {
-  border-radius: 0.375rem;
+  border-radius: 0.275rem;
 }
 .form-control-color.form-control-sm {
   height: calc(1.5em + 0.5rem + 2px);
@@ -2858,9 +2862,9 @@ textarea.form-control-lg {
   }
 }
 .btn:hover {
-  color: var(--bs-btn-hover-color);
-  background-color: var(--bs-btn-hover-bg);
-  border-color: var(--bs-btn-hover-border-color);
+  background-color: #F2B90F;
+  border-color: #F2B90F;
+  box-shadow: 0 0 0 0.25rem #F2B90F;
 }
 .btn-check + .btn:hover {
   color: var(--bs-btn-color);
@@ -2873,6 +2877,7 @@ textarea.form-control-lg {
   border-color: var(--bs-btn-hover-border-color);
   outline: 0;
   box-shadow: var(--bs-btn-focus-box-shadow);
+  
 }
 .btn-check:focus-visible + .btn {
   border-color: var(--bs-btn-hover-border-color);
