--- a/scss/main.css
+++ b/scss/main.css
@@ -1997,8 +1997,8 @@ progress {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #FFFFFF;
-  background-color: #333333;
+  color: #212529;
+  background-color: #fff;
   background-clip: padding-box;
   border: 1px solid #ced4da;
   -webkit-appearance: none;
@@ -2019,11 +2019,11 @@ progress {
   cursor: pointer;
 }
 .form-control:focus {
-  color: #FFFFFF;
-  background-color: #333333;
-  border-color: #F2B90F;
+  color: #212529;
+  background-color: #fff;
+  border-color: #86b7fe;
   outline: 0;
-  box-shadow: 0 0 0 0.15rem #F2B90F;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -2087,12 +2087,8 @@ progress {
 .form-control:hover:not(:disabled):not([readonly])::-webkit-file-upload-button {
   background-color: #dde0e3;
 }
-.form-control:hover {
-  background-color: rgb(69, 69, 70);
-  color: whitesmoke;
-  border-color: #F2B90F;
-  outline: 0;
-  box-shadow: 0 0 0 0.10rem #F2B90F;
+.form-control:hover:not(:disabled):not([readonly])::file-selector-button {
+  background-color: #dde0e3;
 }
 
 .form-control-plaintext {
@@ -2165,17 +2161,17 @@ textarea.form-control-lg {
 .form-control-color {
   width: 3rem;
   height: calc(1.5em + 0.75rem + 2px);
-  padding: 0.275rem;
+  padding: 0.375rem;
 }
 .form-control-color:not(:disabled):not([readonly]) {
   cursor: pointer;
 }
 .form-control-color::-moz-color-swatch {
   border: 0 !important;
-  border-radius: 0.275rem;
+  border-radius: 0.375rem;
 }
 .form-control-color::-webkit-color-swatch {
-  border-radius: 0.275rem;
+  border-radius: 0.375rem;
 }
 .form-control-color.form-control-sm {
   height: calc(1.5em + 0.5rem + 2px);
@@ -2862,9 +2858,9 @@ textarea.form-control-lg {
   }
 }
 .btn:hover {
-  background-color: #F2B90F;
-  border-color: #F2B90F;
-  box-shadow: 0 0 0 0.25rem #F2B90F;
+  color: var(--bs-btn-hover-color);
+  background-color: var(--bs-btn-hover-bg);
+  border-color: var(--bs-btn-hover-border-color);
 }
 .btn-check + .btn:hover {
   color: var(--bs-btn-color);
@@ -2877,7 +2873,6 @@ textarea.form-control-lg {
   border-color: var(--bs-btn-hover-border-color);
   outline: 0;
   box-shadow: var(--bs-btn-focus-box-shadow);
-  
 }
 .btn-check:focus-visible + .btn {
   border-color: var(--bs-btn-hover-border-color);
@@ -10940,12 +10935,13 @@ textarea.form-control-lg {
 }
 html {
   scroll-behavior: smooth;
-  scroll-padding-top: 100px;
+  scroll-padding-top: 150px;
 }
 
 body {
-  height: auto;
+  height: 100vh;
   overflow-y: scroll;
+  overflow-x: unset;
   position: relative;
   margin: 0px;
   padding: 0px;
@@ -10959,15 +10955,38 @@ body .navbar {
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
 }
+body .navbar .nav-pills {
+  --bs-nav-pills-link-active-bg: none;
+}
 body .navbar .nav-link {
   font-size: 20px;
   font-weight: 500;
   color: #333333;
+  margin-bottom: 0px;
+  line-height: 1.5;
+}
+body .navbar .nav-link.active::after,
+body .navbar .nav-link:hover:after {
+  width: 100%;
+}
+body .navbar .nav-link:after {
+  background-color: rgb(0, 47, 255);
+  display: block;
+  content: "";
+  height: 2px;
+  width: 0%;
+  -webkit-transition: width 0.3s ease-in-out;
+  -moz--transition: width 0.3s ease-in-out;
+  transition: width 0.3s ease-in-out;
+}
+body .navbar .offcanvas-body .nav-link:focus,
+body .navbar .offcanvas-body .nav-link:hover {
+  color: rgb(111, 111, 112);
 }
 body h1, body .h1,
 body h2,
 body .h2 {
-  font-size: calc(18px + 2.890625vw);
+  font-size: calc(18px + 2.5vw);
   font-weight: 700;
   color: #000000;
 }
@@ -10977,59 +10996,129 @@ body h3, body .h3 {
 }
 body p {
   line-height: normal;
-  word-spacing: 4.4px;
+  word-spacing: 4px;
 }
-body .solution_items {
+body main {
+  position: relative;
+}
+body main .gradient {
+  background: linear-gradient(29deg, rgba(37, 90, 246, 0.2722338936) 46%, rgba(234, 246, 37, 0.2722338936) 48%, rgba(214, 225, 246, 0.2722338936) 49%, rgba(113, 162, 252, 0.2722338936) 51%, rgba(62, 127, 244, 0.5887605042) 53%, rgba(246, 246, 214, 0.6335784314) 55%, rgba(244, 242, 92, 0.6335784314) 57%, rgba(45, 135, 251, 0.6896008403) 60%, rgba(239, 238, 93, 0.4318977591) 62%);
+  background-size: 400% 400%;
+  -webkit-animation: gradient 25s linear infinite;
+          animation: gradient 25s linear infinite;
+  height: 100vh;
+  height: auto;
+}
+@-webkit-keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  25% {
+    background-position: 80% 100%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  25% {
+    background-position: 80% 100%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+body main .underline {
+  font-size: calc(18px + 2.5vw);
+}
+body main .underline svg {
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  left: 0;
+  top: 0;
+  z-index: -2;
+}
+body main .underline svg path {
+  fill: none;
+  -webkit-animation: underline 3s infinite;
+          animation: underline 3s infinite;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  opacity: 0;
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+}
+@-webkit-keyframes underline {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes underline {
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+body main .solution_items {
   color: #FFFFFF;
 }
-body .solution_items .solution_item_content {
+body main .solution_items .solution_item_content {
   font-size: calc(12px + 0.390625vw);
   line-height: normal;
 }
-body .first {
+body main .first {
   background-color: #3587F2;
 }
-body .second {
+body main .second {
   background-color: #04BFBF;
 }
-body .third {
+body main .third {
   background-color: #F2B90F;
 }
-body .fourth {
+body main .fourth {
   height: 180px;
   background-color: #0ABF16;
 }
-body .technologies_item {
+body main .technologies_item {
   border-radius: 20px;
   border: none;
   font-size: calc(16px + 0.625vw);
   color: #FFFFFF;
   font-weight: 600;
 }
-body .card {
+body main .card {
   background: #3587F2;
 }
-body .payment {
+body main .payment {
   background: #F2B90F;
 }
-body .mobile {
+body main .mobile {
   background: #04BFBF;
 }
-body .api {
+body main .api {
   background: #0ABF16;
 }
-body .services_schame_item {
+body main .services_schame_item {
   color: #FFFFFF;
   border-radius: 20px;
   font-size: calc(14px + 0.3125vw);
 }
-body .banks {
+body main .banks {
   background: #3587F2;
 }
-body .merchants {
+body main .merchants {
   background: #04BFBF;
 }
-body .business {
+body main .business {
   background: #F2B90F;
 }
 body footer {
@@ -11044,15 +11133,38 @@ body footer .footer_main h2, body footer .footer_main .h2 {
 body .form-control {
   background: #333333;
   border: none;
+  color: #FFFFFF;
 }
-body .link {
-  text-decoration: none;
+body .form-control:focus {
+  color: #FFFFFF;
+  background-color: #333333;
+  border-color: #F2B90F;
+  outline: 0;
+  box-shadow: 0 0 0 0.15rem #F2B90F;
+}
+body .form-control:hover {
+  color: #FFFFFF;
+  background-color: #333333;
+  border-color: #F2B90F;
+  outline: 0;
+  box-shadow: 0 0 0 0.15rem #F2B90F;
 }
 body .btn {
   background: #333333;
   color: #FFFFFF;
   font-weight: 600;
-  font-size: 12px;
+  font-size: calc(8px + 0.3125vw);
+}
+body .btn:focus {
+  background: #F2B90F;
+  box-shadow: 0 0 0 0.15rem #F2B90F;
+}
+body .btn:hover {
+  background: #F2B90F;
+  box-shadow: 0 0 0 0.15rem #F2B90F;
+}
+body .link {
+  text-decoration: none;
 }
 body .footer_bottom {
   background: #2e2e2e;
