--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,12 +31,13 @@ $bottom-color: #777777;
 
 html {
     scroll-behavior: smooth;
-    scroll-padding-top: 100px;
+    scroll-padding-top: 150px;
 }
 
 body {
-    height: auto;
+    height: 100vh;
     overflow-y: scroll;
+    overflow-x: unset;
     position: relative;
     margin: 0px;
     padding: 0px;
@@ -45,22 +46,51 @@ body {
     font-size: calc(14px + 4.5 * (100vw / 1280));
     color: $main-color;
     font-weight: $font-weight-main;
-    
+     
     
     .navbar {
         backdrop-filter: blur(10px);
-
+       
+        .nav-pills {
+            --bs-nav-pills-link-active-bg: none;
+        }
+       
         .nav-link {
             font-size: $font-size-nav;
             font-weight: $font-weight-nav;
             color: $nav-color;
+            margin-bottom: 0px;
+            line-height: 1.5;
         }
-        
+
+        .nav-link.active::after, 
+        .nav-link:hover:after {
+            width: 100%;
+        } 
+
+        .nav-link:after {
+            background-color: rgb(0, 47, 255);
+            display: block;
+            content: "";
+            height: 2px;
+            width: 0%;
+            -webkit-transition: width .3s ease-in-out;
+            -moz--transition: width .3s ease-in-out;
+            transition: width .3s ease-in-out;
+        }
+
+        .offcanvas-body {
+            .nav-link:focus,
+            .nav-link:hover {
+                color: rgb(111, 111, 112);
+            }
+        }
     }
+        
 
     h1,
     h2 {
-        font-size: calc(18px + 37 * (100vw / 1280));
+        font-size: calc(18px + 32 * (100vw / 1280));
         font-weight: $font-weight-h1_h2;
         color: $main-color;
     }
@@ -74,89 +104,143 @@ body {
 
     p {
         line-height: normal;
-        word-spacing: 4.4px;
+        word-spacing: 4px;
 
     }
 
-    .solution_items {
-        color: $element-color;
-
-            .solution_item_content {
-                font-size: calc(12px + 5 * (100vw / 1280));
-                line-height: normal;
+    main {
+        position: relative;
+        
+        
+        .gradient {
+            background: 
+            linear-gradient(29deg, rgba(37, 90, 246, 0.272233893557423) 46%, rgba(234, 246, 37, 0.272233893557423) 48%, rgba(214, 225, 246, 0.272233893557423) 49%, rgba(113, 162, 252, 0.272233893557423) 51%, rgba(62, 127, 244, 0.5887605042016807) 53%, rgba(246, 246, 214, 0.633578431372549) 55%, rgba(244, 242, 92, 0.633578431372549) 57%, rgba(45, 135, 251, 0.6896008403361344) 60%, rgba(239, 238, 93, 0.4318977591036415) 62%);
+            background-size: 400% 400%;
+            animation: gradient 25s linear infinite;
+            height: 100vh;
+            height: auto;
+        }
+        
+               
+        @keyframes gradient {
+            0% {
+                background-position: 0% 50%;
             }
-
+            25% {
+                background-position: 80% 100%;
+            }
         
-    }
-
-    .first {
-        background-color: #3587F2;
-    }
-
-    .second {
-        background-color: #04BFBF;
-    }
-
-    .third {
-        background-color: #F2B90F;
-    }
-
-    .fourth {
-        height: 180px;
-        background-color: #0ABF16;
+            50% {
+                background-position: 100% 50%;
+            }
         
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+    //animation!!
+        .underline {
+            font-size: calc(18px + 32 * (100vw / 1280));
+           
+        }    
+         
+        .underline svg {
+            position: absolute;
+            width: 100%;
+            height: 5px;    
+            left: 0;
+            top: 0;
+            z-index: -2;
+        }    
+        .underline svg path {
+            fill: none;
+            animation: underline 3s infinite;
+            animation-delay: 0s;
+            opacity: 0;
+            animation-delay: 0.5s;
 
+        }
+        
+        @keyframes underline {
+            
+            100% {
+                stroke-dashoffset: 0;
+                
+            }
+        }
+
+       .solution_items {
+            color: $element-color;
+
+                .solution_item_content {
+                    font-size: calc(12px + 5 * (100vw / 1280));
+                    line-height: normal;
+                }
+        }
+
+        .first {
+            background-color: #3587F2;
+        }
+
+        .second {
+            background-color: #04BFBF;
+        }
+
+        .third {
+            background-color: #F2B90F;
+        }
+
+        .fourth {
+            height: 180px;
+            background-color: #0ABF16;
+        }
+
+
+        .technologies_item {
+            border-radius: 20px;
+            border: none;
+            font-size: calc(16px + 8 * (100vw / 1280));
+            color: $element-color;
+            font-weight: $font-weight-h3;
+        }
+
+        .card {
+            background: #3587F2;
+
+        }
+
+        .payment {
+            background: #F2B90F;
+        }
+
+        .mobile {
+            background: #04BFBF;
+        }
+
+        .api {
+            background: #0ABF16;
+        }
+
+        .services_schame_item {
+            color: $element-color;
+            border-radius: 20px;
+            font-size: calc(14px + 4 * (100vw / 1280));
+
+        }
+
+        .banks {
+            background: #3587F2;
+
+        }
+
+        .merchants {
+            background: #04BFBF;
+        }
+
+        .business {
+            background: #F2B90F;
+        }
     }
-
-
-    .technologies_item {
-        border-radius: 20px;
-        border: none;
-        font-size: calc(16px + 8 * (100vw / 1280));
-        color: $element-color;
-        font-weight: $font-weight-h3;
-    }
-
-    .card {
-        background: #3587F2;
-
-    }
-
-    .payment {
-        background: #F2B90F;
-    }
-
-
-
-    .mobile {
-        background: #04BFBF;
-
-    }
-
-    .api {
-        background: #0ABF16;
-    }
-
-    .services_schame_item {
-        color: $element-color;
-        border-radius: 20px;
-        font-size: calc(14px + 4 * (100vw / 1280));
-
-    }
-
-    .banks {
-        background: #3587F2;
-
-    }
-
-    .merchants {
-        background: #04BFBF;
-    }
-
-    .business {
-        background: #F2B90F;
-    }
-
     footer {
         background: $main-color;
 
@@ -172,19 +256,45 @@ body {
     .form-control {
         background: #333333;
         border: none;
+        color: #FFFFFF;
+    }
+    .form-control:focus {
+        color: #FFFFFF;
+        background-color: #333333;
+        border-color: #F2B90F;
+        outline: 0;
+        box-shadow: 0 0 0 0.15rem #F2B90F;
+    }
+    .form-control:hover{
+        color: #FFFFFF;
+        background-color: #333333;
+        border-color: #F2B90F;
+        outline: 0;
+        box-shadow: 0 0 0 0.15rem #F2B90F;
     }
 
-    .link {
-        text-decoration: none;
-    }
 
     .btn {
         background: #333333;
         color: $element-color;
         font-weight: $font-weight-h3;
-        font-size: 12px;
+        font-size: calc(8px + 4 * (100vw / 1280));;
     }
 
+    .btn:focus{
+        background:#F2B90F;
+        box-shadow: 0 0 0 0.15rem #F2B90F;
+    }
+
+    .btn:hover{
+        background: #F2B90F;
+        box-shadow: 0 0 0 0.15rem #F2B90F;
+    }
+
+    .link {
+        text-decoration: none;
+    }    
+    
     .footer_bottom {
         background: #2e2e2e;
 
