--- a/scss/main.scss
+++ b/scss/main.scss
@@ -143,42 +143,46 @@ body {
         .main_baner_underline {
             font-size: calc(18px + 32 * (100vw / 1280));
             display: flex;
-            flex-wrap: wrap;
             margin-top: 0px;
-            margin-left: 42%;
+            margin-left: 40%;
         }
     //animation underline
-        svg path {
-            stroke-dasharray: 420;
-            stroke-dashoffset: 420;
-            animation: draw 2s forwards;
+        svg {
+            g {
+                .active {
+                stroke-dasharray: 420;
+                stroke-dashoffset: 420;
+                animation: draw 4s forwards;
+            }
         }
-
-        svg g {
-            fill-opacity: 0;
-            animation: fill-in 2s forwards;
-        }
-
-        @keyframes draw {
-            to {
-                stroke-dashoffset: 0;
+            path {
+                .active {
+                fill-opacity: 0;
+                animation: fill-in 4s forwards;
             }
         }
 
-        @keyframes fill-in {
-            to {
-                fill-opacity: 1;
+            @keyframes draw {
+                to {
+                    stroke-dashoffset: 0;
+                }
             }
-            
-        }
+
+            @keyframes fill-in {
+                to {
+                    fill-opacity: 1;
+                }
+                
+            }
        
-   
+    }
 
         .solutions_underline {
             display: flex;
-            flex-wrap: wrap;
-            margin-left: 8%
+            
         }
+
+        
 
        .solution_items {
             color: $element-color;
@@ -207,14 +211,12 @@ body {
         }
         .solution_bottom_underline {
             display: flex;
-            flex-wrap: wrap;
-            margin-left: -1%
+               
         }
-
+        
         .technologies_underline {
             display: flex;
-            flex-wrap: wrap;
-            margin-left: 5%
+            
         }
 
         .technologies_item {
@@ -223,22 +225,38 @@ body {
             font-size: calc(16px + 8 * (100vw / 1280));
             color: $element-color;
             font-weight: $font-weight-h3;
+            transform: translateY(400%);
+            transition: transform 0.9s ease;
+
+            
+        }
+        .technologies_item.active {
+            transform: translateY(0);
+        }
+        .technologies_schema_img {
+            transform: translateY(400%);
+            transition: transform 0.9s ease;
+               
+        }
+        .technologies_schema_img.active {
+            transform: translateY(0);
         }
 
-        .technologies_bottom_underline {
-            display: flex;
-            flex-wrap: wrap;
-            margin-left: -1%
+        ul {
+            list-style: none;
         }
 
-        .services_underline {
-            display: flex;
-            flex-wrap: wrap;
-            margin-left: 10%
+              
+        ul > li:before {
+            content: '\2714';
+            top: 0;
+            left: 0;
+            color: #3587F2;
+            margin-right: 10px;
         }
+        
         .card {
             background: #3587F2;
-
         }
 
         .payment {
@@ -272,7 +290,7 @@ body {
         .business {
             background: #F2B90F;
         }
-    }
+}
     footer {
         background: $main-color;
 
@@ -286,34 +304,41 @@ body {
 
         .footer_main_underline {
             display: flex;
-            flex-wrap: wrap;
             margin-left: 18%
         }
 
-        svg path {
-            stroke-dasharray: 420;
-            stroke-dashoffset: 420;
-            animation: draw 2s forwards;
+//animation underline
+         svg {
+            g {
+                .active {
+                stroke-dasharray: 420;
+                stroke-dashoffset: 420;
+                animation: draw 4s forwards;
+            }
         }
-
-        svg g {
-            fill-opacity: 0;
-            animation: fill-in 2s forwards;
-        }
-
-        @keyframes draw {
-            to {
-                stroke-dashoffset: 0;
+            path {
+                .active {
+                fill-opacity: 0;
+                animation: fill-in 4s forwards;
             }
         }
 
-        @keyframes fill-in {
-            to {
-                fill-opacity: 1;
+            @keyframes draw {
+                to {
+                    stroke-dashoffset: 0;
+                }
             }
-            
-        }
+
+            @keyframes fill-in {
+                to {
+                    fill-opacity: 1;
+                }
+                
+            }
+       
     }
+        
+}
    
     .form-control {
         background: #333333;
